css: ensures brand doesn't stretch navbar
This is slight, but the brand will stretch the header by
1.5~2px, which is slight, but noticeable when you know it.

--- a/css/nixos-site.css
+++ b/css/nixos-site.css
@@ -36,6 +36,10 @@ p {
     text-decoration: none;
 }
 
+.navbar .brand {
+	padding-bottom: 0;
+}
+
 .dropdown .caret {
 	vertical-align: middle;
 	margin-top: -3px;
